# public-price-profiles

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: carbon_intensity_2022-01-01_2022-01-31.csv  example_electric_invoices.csv  example_gas.csv
notebooks/: Demo_notebook.ipynb
timeseries/: __init__.py
timeseries/common/: __init__.py  datetime_functions.py  enums.py  measurements.py
timeseries/data/: schema.py
timeseries/economic/: tariff_creator.py  tariff_functions.py  tariff_schema.py  tariff_structure.py
timeseries/environmental/: carbon.py
