[tool.poetry]
name = "price-profile"
version = "0.1.0"
description = ""
authors = ["alexandre-canet-E2S <121625353+alexandre-canet-E2S@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "timeseries"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
pint = "^0.20.1"
requests = "^2.28.2"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"
ipykernel = "^6.22.0"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
